Fix residential tag line height on tablet

--- a/sites/all/themes/smallwoodnickle/css/style.css
+++ b/sites/all/themes/smallwoodnickle/css/style.css
@@ -7984,6 +7984,10 @@ nav.sticky ul.links li.last {
     top: 0;
     right: 25%;
   }
+  .page-projects-residential .view-projects.residential .views-row-odd .tags li,
+  .page-projects-residential .view-projects.residential .views-row-even .tags li {
+    line-height: 1.5;
+  }
   .page-projects-residential .view-projects.residential .views-row-odd .img,
   .page-projects-residential .view-projects.residential .views-row-even .img {
     -webkit-box-ordinal-group: 1;
@@ -8002,13 +8006,19 @@ nav.sticky ul.links li.last {
     -webkit-order: 4;
     order: 4;
     font-size: small;
-    line-height: 1.5;
+    line-height: 1.25;
     overflow: hidden;
     position: absolute;
     bottom: 0;
     right: 0;
     font-style: italic;
     padding: 0 0 0 2em;
+  }
+}
+@media screen and (min-width: 768px) and screen and (min-width: 992px) {
+  .page-projects-residential .view-projects.residential .views-row-odd .tease,
+  .page-projects-residential .view-projects.residential .views-row-even .tease {
+    line-height: 1.5;
   }
 }
 .page-projects-residential .view-projects.residential .views-row-odd .head,
